--- a/src/components/searchNav/search.scss
+++ b/src/components/searchNav/search.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  justify-content: space-between;
   width: 100%;
   color: #fff;
   gap: 10px;
@@ -11,9 +12,17 @@
     justify-content: center;
     padding: 1rem 0;
   }
+  .seach_nav_first {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    @include breack_down(large) {
+      justify-content: center;
+    }
+  }
   .search_nav_input_container {
     position: relative;
-    width: 35%;
+    // width: 35%;
     img {
       position: absolute;
       top: 50%;
@@ -39,9 +48,11 @@
       border-radius: 44px;
       padding: 12px 16px;
       color: #d5d5e2;
+      width: 30vw;
       @include breack_down(large) {
         padding: 8px;
-        font-size: 16px;
+        font-size: 12px;
+        width: 45vw;
       }
       &::placeholder {
         color: #d5d5e2;
@@ -57,7 +68,7 @@
       color: #d5d5e2;
       @include breack_down(large) {
         padding: 7px;
-        font-size: 16px;
+        font-size: 12px;
       }
     }
   }
@@ -71,10 +82,46 @@
     color: #d5d5e2;
     @include breack_down(large) {
       padding: 8px;
-      font-size: 16px;
+      font-size: 12px;
     }
   }
   @include breack_down(large) {
-    font-size: 16px;
+    font-size: 12px;
+  }
+}
+.search_nav_pages_btns {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  .search_nav_button {
+    width: 32px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+    border-radius: 50%;
+    background-color: #202020;
+    color: #808080;
+    @include breack_down(large) {
+      width: 25px;
+      height: 25px;
+    }
+    img {
+      position: relative;
+      translate: 50% 0;
+    }
+  }
+  .active_nav_s_b {
+    background-color: #15b79e;
+    color: #fff;
+  }
+  .search_nav_button_dots {
+    color: #808080;
+    margin: 0 5px;
+  }
+  p {
+    color: #808080;
+    font-size: 10px;
   }
 }
