--- a/src/components/searchNav/search.scss
+++ b/src/components/searchNav/search.scss
@@ -1,8 +1,8 @@
 @use "../../App.scss" as *;
 .seach_nav_container {
-  padding: 2rem 0;
+  padding: 2rem 8px 2rem 0;
   display: flex;
-  flex-wrap: wrap;
+  // flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   width: 100%;
@@ -11,18 +11,15 @@
   @include breack_down(large) {
     justify-content: center;
     padding: 1rem 0;
-  }
-  .seach_nav_first {
-    display: flex;
     flex-wrap: wrap;
-    gap: 10px;
-    @include breack_down(large) {
-      justify-content: center;
-    }
   }
   .search_nav_input_container {
     position: relative;
-    // width: 35%;
+    width: 100%;
+    flex-shrink: 1;
+    @include breack_down(medium) {
+      width: 90%;
+    }
     img {
       position: absolute;
       top: 50%;
@@ -48,80 +45,114 @@
       border-radius: 44px;
       padding: 12px 16px;
       color: #d5d5e2;
-      width: 30vw;
       @include breack_down(large) {
         padding: 8px;
         font-size: 12px;
-        width: 45vw;
+        // width: 45vw;
       }
       &::placeholder {
         color: #d5d5e2;
       }
     }
   }
-  .search_nav_arrow {
-    select {
+  .seach_nav_first {
+    display: flex;
+    gap: 10px;
+    flex-shrink: 0;
+    @include breack_down(large) {
+      justify-content: center;
+    }
+    .search_nav_arrow {
+      select {
+        padding: 12px 42px 12px 16px;
+        font-size: 18px;
+        border-radius: 20px;
+        background: transparent;
+        color: #d5d5e2;
+        -webkit-appearance: none;
+        appearance: none;
+        background-image: url("../../assets/arrowDown.svg");
+        background-size: 14px;
+        background-repeat: no-repeat;
+        background-position: calc(100% - 16px) center;
+        @include breack_down(large) {
+          padding: 7px 25px 7px 7px;
+          background-size: 11px;
+          background-position: calc(100% - 7px) center;
+          font-size: 12px;
+        }
+      }
+    }
+    .search_nav_arrow_2 {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: #202020;
+      border-radius: 44px;
       padding: 12px 16px;
-      font-size: 18px;
-      border-radius: 20px;
-      background: transparent;
       color: #d5d5e2;
       @include breack_down(large) {
-        padding: 7px;
+        padding: 8px;
         font-size: 12px;
       }
     }
-  }
-  .search_nav_arrow_2 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #202020;
-    border-radius: 44px;
-    padding: 12px 16px;
-    color: #d5d5e2;
     @include breack_down(large) {
-      padding: 8px;
       font-size: 12px;
     }
   }
-  @include breack_down(large) {
-    font-size: 12px;
-  }
-}
-.search_nav_pages_btns {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-  .search_nav_button {
-    width: 32px;
-    height: 32px;
+
+  .search_nav_pages_btns {
     display: flex;
     align-items: center;
-    justify-content: center;
+    gap: 5px;
     flex-shrink: 0;
-    border-radius: 50%;
-    background-color: #202020;
-    color: #808080;
-    @include breack_down(large) {
-      width: 25px;
-      height: 25px;
+    .search_nav_button {
+      width: 32px;
+      height: 32px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-shrink: 0;
+      border-radius: 50%;
+      background-color: #202020;
+      color: #808080;
+      @include breack_down(large) {
+        width: 25px;
+        height: 25px;
+      }
+      img {
+        position: relative;
+        translate: 50% 0;
+      }
     }
-    img {
-      position: relative;
-      translate: 50% 0;
+    .active_nav_s_b {
+      background-color: #15b79e;
+      color: #fff;
     }
-  }
-  .active_nav_s_b {
-    background-color: #15b79e;
-    color: #fff;
-  }
-  .search_nav_button_dots {
-    color: #808080;
-    margin: 0 5px;
-  }
-  p {
-    color: #808080;
-    font-size: 10px;
+    .search_nav_line {
+      width: 46px;
+      height: 32px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-shrink: 0;
+      border-radius: 8px;
+      background-color: #202020;
+      color: #808080;
+      cursor: pointer;
+      @include breack_down(large) {
+        width: 35px;
+        height: 25px;
+      }
+    }
+    .search_nav_button_dots {
+      color: #808080;
+      margin: 0 5px;
+    }
+    u {
+      color: #808080;
+      font-size: 10px;
+      cursor: pointer;
+    }
   }
 }
