--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -4,6 +4,8 @@
   background-color: #000;
   padding: 2rem 1rem;
   flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
   @include breack_down(large) {
     width: 100%;
   }
@@ -41,22 +43,34 @@
   flex-direction: column;
   gap: 12px;
   color: #d8d8d8;
-  background-color: #101010;
-  padding: 1rem;
-  border-radius: 20px;
+
   .sidebar_link {
     background-color: #181919;
-    border-radius: 12px;
+    border-radius: 5px;
     padding: 8px 12px;
+    margin-left: 16px;
     width: fit-content;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    cursor: pointer;
     @include breack_down(large) {
       padding: 7px 12px;
       font-size: 14px;
     }
   }
+  .sidebar_link_all {
+    border-radius: 21px;
+    padding: 16px;
+    background-color: #181919;
+  }
+  .sidebar_active_link {
+    outline: 1px solid #15b79e;
+  }
 }
 .tag_toggle {
   color: #d8d8d8;
+  // padding: 0 16px;
   .switch {
     position: relative;
     display: inline-block;
@@ -118,7 +132,7 @@
     display: flex;
     align-items: center;
     gap: 1rem;
-    margin: 2rem 0;
+    margin: 24px 16px;
   }
   .toggle_body {
     display: flex;
@@ -127,11 +141,17 @@
   }
   .toggle_single {
     display: flex;
-    width: 100%;
+    // width: 100%;
     justify-content: space-between;
     background-color: #202020;
     border-radius: 5px;
     padding: 6px 12px;
+    margin: 0 16px;
+  }
+  .sidebar_link_all {
+    border-radius: 21px;
+    padding: 16px;
+    background-color: #181919;
   }
 }
 .sidebar_light {
@@ -139,6 +159,36 @@
   color: #d8d8d8;
   gap: 1rem;
   align-items: center;
-  margin: 1rem 0;
+  margin: 4rem 0 0 16px;
   cursor: pointer;
+  @include breack_down(large) {
+    margin: 2rem 0 0 16px;
+  }
+}
+
+.sidebar_p_container {
+  background-color: #101010;
+  border-radius: 24px;
+  padding: 16px 0;
+}
+
+.sidebar_link_post {
+  background-color: #181919;
+  border-radius: 5px;
+  padding: 8px 12px;
+  margin: 0 16px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  // width: fit-content;
+  // width: calc(100% - 16px);
+  gap: 8px;
+  cursor: pointer;
+  img {
+    cursor: pointer;
+  }
+  @include breack_down(large) {
+    padding: 7px 12px;
+    font-size: 14px;
+  }
 }
