--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -96,6 +96,11 @@ nav {
   display: flex;
   align-items: center;
   gap: 1rem;
+  a {
+    text-decoration: none;
+    color: #fff;
+    cursor: pointer;
+  }
   button {
     display: flex;
     align-items: center;
@@ -105,6 +110,7 @@ nav {
     border: none;
     padding: 8px 16px;
     gap: 5px;
+    cursor: pointer;
     @include breack_down(large) {
       padding: 4px 8px;
     }
@@ -184,4 +190,13 @@ nav {
 }
 .ham_nav_back {
   display: block;
+}
+
+.profile_img_container {
+  img {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    cursor: pointer;
+  }
 }
