--- a/src/pages/acc/login.scss
+++ b/src/pages/acc/login.scss
@@ -1,5 +1,5 @@
 @use "../../App.scss" as *;
-.acc_container {
+.log_container {
   background-image: linear-gradient(to bottom, #10101099, #10101099),
     url("../../assets/home.png");
   background-position: center;
@@ -12,7 +12,7 @@
   @include breack_down(large) {
     height: auto;
   }
-  .acc_form_container {
+  .log_form_container {
     display: flex;
     align-items: center;
     width: 60vw;
@@ -24,7 +24,7 @@
       height: auto;
       padding: 20px;
     }
-    .acc_left {
+    .log_left {
       width: 50%;
       background-color: #202020;
       display: flex;
@@ -41,7 +41,7 @@
         border-radius: 12px 12px 0 0;
       }
     }
-    .acc_right {
+    .log_right {
       height: 100%;
       width: 50%;
       display: flex;
@@ -70,6 +70,7 @@
         display: flex;
         flex-direction: column;
         gap: 1rem;
+        width: 100%;
         @include breack_down(large) {
           gap: 12px;
         }
@@ -99,51 +100,7 @@
             }
           }
         }
-        .input_div_s_container {
-          display: flex;
-          gap: 18px;
-          .input_div_s {
-            width: 50%;
-            display: flex;
-            flex-direction: column;
-            gap: 8px;
-            input {
-              width: 100%;
-              background-color: transparent;
-              border-radius: 8px;
-              padding: 8px;
-              border: 1px solid #66666659;
-              color: #fff;
-            }
-            label {
-              font-size: 16px;
-              font-weight: 400;
-              color: #808080;
-            }
-          }
-        }
-        .input_btn_f {
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          width: 100%;
-          padding: 17px;
-          background-color: #202020;
-          border-radius: 40px;
-          cursor: pointer;
-          font-size: 20px;
-          border: 1px solid #303030;
-          gap: 16px;
-          @include breack_down(large) {
-            padding: 8px;
-            font-size: 12px;
-          }
-          img {
-            @include breack_down(large) {
-              width: 16px;
-            }
-          }
-        }
+
         .input_btn_s {
           display: flex;
           align-items: center;
@@ -168,6 +125,9 @@
         }
       }
       .s_in {
+        display: flex;
+        align-items: center;
+        gap: 5px;
         @include breack_down(large) {
           font-size: 12px;
         }
@@ -180,30 +140,63 @@
       }
     }
   }
-}
 
-.log_ing_s_btns {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  width: 100%;
-  gap: 16px;
-  button {
+  .log_ing_s_btns {
     display: flex;
     align-items: center;
-    justify-content: center;
-    gap: 8px;
+    flex-direction: column;
     width: 100%;
-    border-radius: 40px;
-    background-color: #202020;
-    border: 1px solid #303030;
-    padding: 15px 0;
-    font-size: 20px;
-    cursor: pointer;
-    color: #fff;
-    img {
-      width: 32px;
-      height: 32px;
+    gap: 16px;
+    button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+      width: 100%;
+      border-radius: 40px;
+      background-color: #202020;
+      border: 1px solid #303030;
+      padding: 15px 0;
+      font-size: 20px;
+      cursor: pointer;
+      color: #fff;
+      @include breack_down(large) {
+        font-size: 14px;
+        padding: 10px 0;
+      }
+      img {
+        width: 32px;
+        height: 32px;
+        @include breack_down(large) {
+          width: 18px;
+          height: 18px;
+        }
+      }
+    }
+  }
+  .login_or {
+    position: relative;
+    width: 100%;
+    text-align: center;
+    p {
+      position: relative;
+      z-index: 2;
+      background-color: #181919;
+      width: fit-content;
+      text-align: center;
+      left: 50%;
+      translate: -50% 0;
+      padding: 0 23px;
+      color: #c0c0c0;
+    }
+    &::before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 1px;
+      background-color: #303030;
+      left: 0;
+      top: calc(50% - 0.5px);
     }
   }
 }
