--- a/src/pages/usLayout/user/user.scss
+++ b/src/pages/usLayout/user/user.scss
@@ -6,7 +6,7 @@
   .user_hero {
     height: 60vh;
     background-image: linear-gradient(to bottom, #10101099, #10101099),
-      url("../../assets/home.png");
+      url("../../../assets/home.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
