--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -193,10 +193,32 @@ nav {
 }
 
 .profile_img_container {
-  img {
+  position: relative;
+  .nav_profile {
     width: 3rem;
     height: 3rem;
     border-radius: 50%;
     cursor: pointer;
+  }
+  .nav_profile_menu {
+    position: absolute;
+    top: 100%;
+    left: -25%;
+    translate: -50% 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    background-color: #181919;
+    padding: 1rem;
+    a,
+    p {
+      color: #fff;
+      text-decoration: none;
+      transition: 0.4s;
+      cursor: pointer;
+      &:hover {
+        color: #15b79e;
+      }
+    }
   }
 }
