--- a/src/pages/stats/stats.scss
+++ b/src/pages/stats/stats.scss
@@ -48,11 +48,33 @@
       .stats_l_item {
         display: flex;
         justify-content: space-between;
-        width: 20%;
+        align-items: center;
+        gap: 1rem;
+        width: 24%;
+        background-color: #181919;
+        padding: 16px 24px;
+        border-radius: 8px;
+        .line_text {
+          p {
+            font-size: 24px;
+          }
+          h4 {
+            font-size: 48px;
+          }
+        }
         .line_cnt {
-          width: 100%;
+          width: 50%;
         }
       }
+    }
+    .stats_b_container {
+      background-color: #000;
+      border-radius: 24px;
+      padding: 24px;
+      // height: 70vh;
+      // canvas {
+      //   width: 100% !important;
+      // }
     }
   }
 }
