--- a/src/pages/usLayout/creator/creaoruser.scss
+++ b/src/pages/usLayout/creator/creaoruser.scss
@@ -1,7 +1,10 @@
+@use "../../../App.scss" as *;
 .creator_container {
   background-color: #000;
   padding: 32px 24px;
-
+  @include breack_down(large) {
+    padding: 0;
+  }
   .creator_hero {
     height: 60vh;
     background-image: linear-gradient(to bottom, #10101099, #10101099),
@@ -14,6 +17,10 @@
     justify-content: flex-end;
     padding: 48px;
     position: relative;
+    @include breack_down(large) {
+      padding: 0;
+      height: 50vh;
+    }
     .edit_creator_icon {
       width: 56px;
       height: 56px;
@@ -21,6 +28,12 @@
       top: 48px;
       right: 48px;
       cursor: pointer;
+      @include breack_down(large) {
+        width: 30px;
+        height: 30px;
+        top: 20px;
+        right: 20px;
+      }
     }
   }
   .creator_profile {
@@ -30,6 +43,10 @@
     align-items: center;
     top: -100px;
     margin-bottom: -12px;
+    @include breack_down(large) {
+      top: -35px;
+      padding: 0 5px;
+    }
     .edit_creator_btn {
       display: flex;
       align-items: center;
@@ -41,31 +58,64 @@
       border-radius: 10px;
       color: #fff;
       cursor: pointer;
+      @include breack_down(large) {
+        padding: 4px 8px;
+        width: 33%;
+        font-size: 12px;
+        justify-content: center;
+        height: 1.5rem;
+      }
+      img {
+        @include breack_down(large) {
+          height: 16px;
+        }
+      }
     }
     .creator_img_container {
       display: flex;
       flex-direction: column;
       align-items: center;
       gap: 16px;
+      @include breack_down(large) {
+        width: 33%;
+        gap: 8px;
+      }
       h2 {
         font-size: 48px;
         font-weight: 700;
         color: #fff;
+        @include breack_down(large) {
+          font-size: 20px;
+          text-align: center;
+        }
       }
       p {
         font-size: 36px;
         color: #c0c0c0;
+        @include breack_down(large) {
+          font-size: 16px;
+        }
       }
       img {
         width: 200px;
         height: 200px;
         border-radius: 50%;
         outline: 1px solid #15b79e;
+        @include breack_down(large) {
+          width: 70px;
+          height: 70px;
+        }
       }
     }
     .creator_btns {
       display: flex;
       gap: 24px;
+      @include breack_down(large) {
+        // gap: 12px;
+        justify-content: space-between;
+        gap: 0;
+        width: 33%;
+      }
       button {
         padding: 8px 16px;
         color: #fff;
@@ -75,6 +125,21 @@
         align-items: center;
         justify-content: center;
         cursor: pointer;
+        @include breack_down(large) {
+          padding: 4px 8px;
+          font-size: 12px;
+          height: 1.5rem;
+        }
+        p {
+          @include breack_down(large) {
+            font-size: 12px;
+          }
+        }
+        img {
+          @include breack_down(large) {
+            height: 16px;
+          }
+        }
         span {
           height: 24px;
         }
@@ -107,6 +172,9 @@
           transition: 0.5s;
           background-color: #15b79e;
         }
+      }
+      @include breack_down(large) {
+        padding: 24px 24px;
       }
       &::after {
         content: "";
