--- a/src/pages/dms/dm.scss
+++ b/src/pages/dms/dm.scss
@@ -1,7 +1,9 @@
+@use "../../App.scss" as *;
 .dm_container {
   background-color: #000;
   padding-top: 2rem;
   width: 100%;
+  height: 100%;
   color: #fff;
   .dm_head {
     display: flex;
@@ -13,12 +15,23 @@
       align-items: center;
       justify-content: center;
       width: 20%;
+      @include breack_down(large) {
+        padding: 4px 10px;
+      }
       button {
         background-color: #303030;
         color: #72767d;
         padding: 5px 6px;
         border: none;
         border-radius: 3px;
+        @include breack_down(large) {
+          display: none;
+        }
+      }
+      img {
+        @include breack_up(medium) {
+          display: none !important;
+        }
       }
     }
     .dm_right_head {
@@ -28,8 +41,12 @@
       padding: 16px 40px;
       background-color: #181919;
       border-radius: 0 10px 0 0;
+      @include breack_down(large) {
+        padding: 4px 10px;
+      }
       .dm_man {
         display: flex;
+        align-items: center;
         gap: 9px;
         p {
           font-size: 16px;
@@ -51,13 +68,29 @@
   .dm_body_continer {
     width: 100%;
     display: flex;
+    height: 70vh;
+    position: relative;
+    .dm_left_open {
+      left: 0 !important;
+    }
+
     .dm_left {
       width: 20%;
-      height: 80vh;
+      height: 100%;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       background-color: #181919;
+      transition: 0.5s;
+      @include breack_down(large) {
+        position: absolute;
+        left: -100%;
+        top: 0;
+        width: 100%;
+        // height: 100%;
+        z-index: 2;
+      }
+
       .dm_left_top {
         padding: 16px 8px;
         .dm_left_title {
@@ -175,6 +208,10 @@
     .dm_right {
       width: 80%;
       padding: 48px;
+      @include breack_down(large) {
+        width: 100%;
+        padding: 1rem;
+      }
       .dm_right_title {
         color: #b9bbbe;
         font-size: 13.4px;
