--- a/src/pages/store/store.scss
+++ b/src/pages/store/store.scss
@@ -1,3 +1,4 @@
+@use "../../App.scss" as *;
 .store_container {
   background-color: #000;
   color: #fff;
@@ -8,17 +9,28 @@
       color: #d5d5e2;
       font-size: 32px;
       font-weight: 600;
+      @include breack_down(large) {
+        margin-bottom: 24px;
+        font-size: 24px;
+      }
     }
     .store_items_container {
       display: flex;
       width: 100%;
       justify-content: space-between;
+      @include breack_down(large) {
+        flex-direction: column;
+        gap: 1rem;
+      }
       .store_item {
         position: relative;
         width: 24%;
         border-radius: 8px;
         overflow: hidden;
         height: fit-content;
+        @include breack_down(large) {
+          width: 100%;
+        }
         .store_item_text {
           background-color: #101010;
           padding: 16px 24px;
@@ -70,9 +82,10 @@
   .store_f_items {
     width: 100%;
     overflow: hidden;
-  }
-  .store_f_items {
     padding: 3rem;
+    @include breack_down(large) {
+      padding: 1rem;
+    }
   }
 
   .slick-dots li button:before {
@@ -86,11 +99,18 @@
   }
   .store_f_items {
     padding: 32px 0 32px 24px;
+    @include breack_down(large) {
+      padding: 25px;
+    }
     h2 {
       margin-bottom: 56px;
       color: #d5d5e2;
       font-size: 32px;
       font-weight: 600;
+      @include breack_down(large) {
+        margin-bottom: 24px;
+        font-size: 24px;
+      }
     }
   }
   .store_products {
@@ -100,12 +120,25 @@
       color: #d5d5e2;
       font-size: 32px;
       font-weight: 600;
+      @include breack_down(large) {
+        margin-bottom: 24px;
+        font-size: 24px;
+      }
     }
     .store_produscts_items {
       display: flex;
       gap: 1rem;
+      @include breack_down(large) {
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+      }
       .store_produscts_item {
         width: 25%;
+        @include breack_down(large) {
+          flex-direction: column;
+          width: 95%;
+        }
         img {
           width: 100%;
           height: 100%;
