--- a/src/pages/usLayout/user/userAbout.scss
+++ b/src/pages/usLayout/user/userAbout.scss
@@ -1,3 +1,4 @@
+@use "../../../App.scss" as *;
 .user_about_container {
   padding: 40px 48px;
   color: #d8d8d8;
@@ -6,15 +7,26 @@
   gap: 40px;
   background-color: #101010;
   border-radius: 8px;
+  @include breack_down(large) {
+    padding: 20px;
+    gap: 20px;
+  }
   h2 {
     font-size: 36px;
     font-weight: 600;
+    @include breack_down(large) {
+      font-size: 24px;
+    }
   }
   .user_about_text {
     display: flex;
     flex-direction: column;
     gap: 23px;
     font-size: 18px;
+    @include breack_down(large) {
+      gap: 13px;
+      font-size: 16px;
+    }
     ol {
       margin-left: 1rem;
       display: flex;
@@ -26,9 +38,15 @@
     display: flex;
     flex-direction: column;
     gap: 32px;
+    @include breack_down(large) {
+      gap: 18px;
+    }
     h3 {
       font-size: 36px;
       font-weight: 600;
+      @include breack_down(large) {
+        font-size: 18px;
+      }
     }
     .user_about_social_icons {
       display: flex;
