--- a/src/pages/usLayout/user/userHome.scss
+++ b/src/pages/usLayout/user/userHome.scss
@@ -1,3 +1,4 @@
+@use "../../../App.scss" as *;
 .user_home_container {
   display: flex;
   flex-direction: column;
@@ -6,20 +7,32 @@
     flex-direction: column;
     gap: 24px;
     margin-top: 56px;
+    @include breack_down(large) {
+      margin-top: 28px;
+    }
     .user_home_item_title {
       display: flex;
       justify-content: space-between;
       align-items: center;
+      @include breack_down(large) {
+        padding: 5px;
+      }
       h3 {
         font-size: 32px;
         font-weight: 600;
         color: #d5d5e2;
+        @include breack_down(large) {
+          font-size: 18px;
+        }
       }
       a {
         font-size: 24px;
         font-weight: 400;
         text-decoration: none;
         color: #0e6db7;
+        @include breack_down(large) {
+          font-size: 16px;
+        }
       }
     }
     .user_home_cards_container {
@@ -37,21 +50,39 @@
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 32px;
+    @include breack_down(large) {
+      flex-direction: column;
+      align-items: center;
+    }
   }
   .user_home_forum_title {
     display: flex;
     align-items: center;
     gap: 16px;
+    @include breack_down(large) {
+      gap: 8px;
+      padding: 5px;
+    }
     h3 {
       color: #d5d5e2;
       font-size: 32px;
       font-weight: 600;
+      @include breack_down(large) {
+        font-size: 18px;
+      }
+    }
+    img {
+      width: 18px;
     }
   }
   .user_home_forum_container {
     display: flex;
     flex-direction: column;
     gap: 16px;
+    @include breack_down(large) {
+      gap: 8px;
+      padding: 0 5px;
+    }
     .user_home_forum {
       display: flex;
       flex-direction: column;
@@ -59,15 +90,24 @@
       gap: 9px;
       background-color: #101010;
       padding: 16px 24px;
+      @include breack_down(large) {
+        padding: 14px;
+      }
       h4 {
         color: #d5d5e2;
         font-size: 18px;
         font-weight: 700;
+        @include breack_down(large) {
+          font-size: 16px;
+        }
       }
       p {
         color: #d5d5e2;
         font-size: 14px;
         font-weight: 300;
+        @include breack_down(large) {
+          font-size: 12px;
+        }
       }
     }
   }
